# 111b-PIo

./: README.md
RisoVat/: CMakeLists.txt  appcore.cpp  appcore.h  images.qrc  main.cpp
RisoVat/qml/: ImageButton.qml  Main.qml  Panel.qml
